Review fixes
- handle rows.Close()
- remove unnecessary component props
- fix api-backend name mismatch (even if unused)
- removed unused api endpoints
- fixed api regex and missing descriptions
